API related fixes (#193)
* Fix some API endpoints

* Fix definition error

* Remove images

* Mention frontend webapp to use our API
